redis_demo/redis/kubernetes/redis_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-redis
  labels:
    name: test-redis
