redis_demo/redis/kubernetes/redis_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: test-redis
  # The following two lines are required when using an ingress controller
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
  labels:
    app: redis
spec:
  type: LoadBalancer
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
