redis_demo/redis/kubernetes/redis_allow_networkpolicy.yaml
# LIMIT traffic from another application
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow_connection_to_redis
  namespace: demo-redis
spec:
  podSelector:
    matchLabels:
      app: redis
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: redistoyapp
